Add network class, corrected user

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,12 +2,13 @@ project(SimulationProject)  #the same name as root project
 
 add_executable(main main.cpp)
 
-add_library(include user.cpp base.cpp) 
+add_library(include SHARED user.cpp base.cpp simulator.cpp network.cpp) 
 
-target_link_libraries(main PUBLIC include)
-
-target_include_directories(
-   include
+target_include_directories(include
    PUBLIC      
-   ${CAKE_CURRENT_SOURCE_DIR}/..
+      ${CAKE_CURRENT_SOURCE_DIR}/..
 )
+
+target_link_libraries(main 
+   PUBLIC 
+      include)
