Created simple logger

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,7 +2,7 @@ project(SimulationProject)  #the same name as root project
 
 add_executable(main main.cpp)
 
-add_library(include SHARED user.cpp base.cpp simulator.cpp network.cpp) 
+add_library(include SHARED user.cpp base.cpp simulator.cpp network.cpp logger.cpp) 
 
 target_include_directories(include
    PUBLIC      
