Configure for tests, corrected calculate power

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,9 @@ set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
 
 #set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Wextra -Weverything -gcc ")
 
+enable_testing()
+
 #add folder with files
 add_subdirectory(include)               
 add_subdirectory(src)
+add_subdirectory(tests)
